
2009-04-16 cjg
 * Fixed issue with 403 in JSON, and when eprint not found.

2009-04-16 cjg
 * Fixed issue with non standard DOM in Export::JSON

2009-04-16 cjg+tmb
 * Fix for generate-on-demand of /view/foo/index.html URLs

2009-04-17 tmb
 * Added default creators_name view using new A-Z pages option
 * Bundled Unicode::Collate
 * Fixed issues with subject navigation aids on view menus
 * Fixed issues with default division and subject views config

2009-04-22 tmb
 * Made OAI DRIVER set available by default

2009-04-30 tdb
 * Fixed use of substr() on byte-strings in Update::View
 * Use Unicode::Collate to order grouped sections in views

2009-05-06 tdb
 * Merged [4108], removing extraneous <components>

2009-05-11 cjg
 * Added --update option to imports. This is already in trunk but needed
    on 3.1 too.

2009-05-12 cjg
 * Bugfix typo on --update change.

2009-05-26 tdb
 * Fixed MySQL-quoted commands in epadmin upgrade [Alexander Bergolth]

2009-05-27 tdb
 * Fixed login page not using phrase for title

2009-05-28 tdb
 * Fixed an HTML insertion bug in the <title> element [Brian D. Gregg]

2009-06-04 tdb
 * Oracle needs VARCHAR2 ordervalues columns

2009-06-08 tdb
 * Added a prepare_select() method that allows x-database LIMITS
    [Alexander Bergolth]

2009-06-09 tdb
 * Fixed schema errors in uketd_dc and METS/MODS export plugins

2009-06-10 tdb
 * Removed has_table from version checks and drop_table

2009-08-11 tdb
 * Return NOT_FOUND if a request for a secure document doesn't exist
 * Added tool for exporting Perl POD to MediaWiki

2009-08-12 tdb
 * Use "brief" citation to render title duplicate matches >5

2009-09-09 tdb
 * Avoid an undef warning on NULL value ids, fixing #3537

2009-09-16 tdb
 * Fixed current_counter not being available to Oracle
 * Fixed erroneous attempt to set increment=0 in counter_minimum

2009-09-17 tdb
 * Hack to make the indexer only get an object once per iteration (not per
    field)
